# estetica

./: .env  .env_exemplo  .gitignore  db.sqlite3  pyproject.toml  requirements.txt
config/: settings.py  urls.py
estetica/: models.py
estetica/migrations/: 0001_initial.py  0002_agendamento.py  0002_procedimento_imagem.py  0003_alter_agendamento_options_and_more.py  0004_pacote_status.py
estetica/models/: __init__.py  agendamento.py  cliente.py  pacote.py  pacoteprocesso.py  pacotesemprocedimento.py  procedimento.py
estetica/serializers/: __init__.py  cliente.py  pacote.py  pacoteprocesso.py  procedimento.py
uploader/migrations/: 0001_initial.py
usuario/migrations/: 0001_initial.py
