
[project]
name = "estetica"
version = "0.1.0"
description = ""
authors = [
    {name = "mylenetomasi", email = "mylenetomasi.jaque@gmail.com"},
]
dependencies = [
    "django>=4.2.4",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.dev-dependencies]
dev = [
    "black>=23.7.0",
]
